Реализован двухсвязный список для истории задач. Добавлены тесты для проверка порядка и удаления задач.