@@ -20,19 +20,30 @@ class TaskManagerTest {
         assertNotNull(taskManager, "TaskManager должен быть проинициализирован");
         assertNotNull(historyManager, "HistoryManager должен быть проинициализирован");
     }
-    @Test
-    public void shouldAddTaskToHistoryAfterRetrieval() {
-        HistoryManager historyManager = new InMemoryHistoryManager();
-        TaskManager manager = new InMemoryTaskManager(historyManager);
 
+    @Test
+    public void shouldAddTaskToHistoryWithoutDuplicates() {
+        TaskManager manager = Managers.getDefault();
         Task task = new Task(manager.generateId(), "Test Task", "Task Description");
         manager.createTask(task);
 
-        Task retrievedTask = manager.getTaskById(task.getId());
-        assertNotNull(retrievedTask, "Задача должна быть найдена");
+        manager.getTaskById(task.getId());
+        manager.getTaskById(task.getId());
 
-        List<Task> history = historyManager.getHistory();
-        assertEquals(1, history.size(), "История должна содержать одну задачу после получения");
-        assertEquals(task, history.get(0), "Задача в истории должна совпадать с полученной");
+        List<Task> history = manager.getHistory();
+        assertEquals(1, history.size(), "История должна содержать только одну задачу без дубликатов");
+        assertEquals(task, history.getFirst(), "Задача в истории должна быть та, которая была просмотрена");
+    }
+
+    @Test
+    public void shouldNotLoseTaskWhenIdChangedBySetter() {
+        TaskManager manager = Managers.getDefault();
+        Task task = new Task(manager.generateId(), "Task", "Task Description");
+
+        manager.createTask(task);
+        task.setId(32);
+
+        assertNull(manager.getTaskById(task.getId()), "Менеджер не должен находить задачу с новым id");
+        assertNull(manager.getTaskById(32), "Менеджер не должен находить с новым id");
     }
 }
